Install ruby 2.1.6 via rbenv

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,9 @@
 
 openproject_branch: 'stable'
 openproject_version: '4.2'
+openproject_path: /srv/openproject
+openproject_user: openproject
+openproject_group: openproject
 
 db:
   connection: mysql
