--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -7,3 +7,59 @@
   with_items:
   - database
   - configuration
+
+- name: set up database
+  shell: . ~{{openproject_user}}/.profile && ~{{openproject_user}}/.rbenv/shims/bundle exec rake db:create:all
+  args:
+    chdir: '{{openproject_path}}/openproject'
+  # FIXME: from ansible v2.0.0 we can maybe use the bundler module
+  become: yes
+  become_user: '{{openproject_user}}'
+  register: rake_db_create_all
+  changed_when: '"already exists" not in rake_db_create_all.stderr'
+
+- name: generate secret token
+  shell: . ~{{openproject_user}}/.profile && ~{{openproject_user}}/.rbenv/shims/bundle exec rake generate_secret_token
+  args:
+    chdir: '{{openproject_path}}/openproject'
+    creates: '{{openproject_path}}/openproject/config/secret_token.yml'
+  # FIXME: from ansible v2.0.0 we can maybe use the bundler module
+  become: yes
+  become_user: '{{openproject_user}}'
+
+- name: migrate database
+  shell: . ~{{openproject_user}}/.profile && ~{{openproject_user}}/.rbenv/shims/bundle exec rake db:migrate
+  args:
+    chdir: '{{openproject_path}}/openproject'
+  environment:
+    RAILS_ENV: 'production'
+  # FIXME: from ansible v2.0.0 we can maybe use the bundler module
+  become: yes
+  become_user: '{{openproject_user}}'
+  register: generate_migration
+  changed_when: generate_migration.stdout != ""
+
+- name: seed database
+  shell: . ~{{openproject_user}}/.profile && ~{{openproject_user}}/.rbenv/shims/bundle exec rake db:seed
+  args:
+    chdir: '{{openproject_path}}/openproject'
+  environment:
+    RAILS_ENV: 'production'
+    LOCALE: '{{openproject_locale}}'
+  # FIXME: from ansible v2.0.0 we can maybe use the bundler module
+  become: yes
+  become_user: '{{openproject_user}}'
+  register: seed_database
+  changed_when: '"Skipping" not in seed_database.stdout'
+
+- name: precompile assets
+  shell: . ~{{openproject_user}}/.profile && ~{{openproject_user}}/.rbenv/shims/bundle exec rake assets:precompile
+  args:
+    chdir: '{{openproject_path}}/openproject'
+  environment:
+    RAILS_ENV: 'production'
+  # FIXME: from ansible v2.0.0 we can maybe use the bundler module
+  become: yes
+  become_user: '{{openproject_user}}'
+  register: seed_databasae
+  changed_when: '"Writing" in seed_database.stdout'
