--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,9 @@ openproject_path: /srv/openproject
 openproject_user: openproject
 openproject_group: openproject
 openproject_locale: en
+unicorn:
+  host: 127.0.0.1
+  port: 8042
 
 db:
   connection: mysql
