--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,8 @@ openproject_user: openproject
 openproject_group: openproject
 openproject_locale: en
 unicorn:
+  socket: unix
+  path: '{{openproject_path}}/unicorn.sock'
   host: 127.0.0.1
   port: 8042
 
