--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,3 +2,8 @@
 
 - name: reload systemd unit files
   command: systemctl daemon-reload
+
+- name: reload nginx
+  service:
+    name: nginx
+    state: reloaded
