--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -35,6 +35,8 @@
   become: yes
   become_user: '{{openproject_user}}'
 
+- include: plugins.yml
+
 - name: install openproject ruby dependencies
   shell: cd {{openproject_path}}/openproject && ~{{openproject_user}}/.rbenv/shims/bundle install --without postgres sqlite rmagick development test therubyracer
   # FIXME: from ansible v2.0.0 we can use this
