--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -50,7 +50,7 @@
   async: 3600
   poll: 1
   register: run_bundler
-  changed_when: '"Installing" in run_bundler.stdout'
+  #  changed_when: '"Installing" in run_bundler.stdout'
 
 - name: install openproject node dependencies
   npm:
