--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -11,9 +11,8 @@
   git:
     repo: 'https://github.com/opf/openproject.git'
     dest: '{{openproject_path}}/openproject'
-    version: '{{openproject_branch}}/{{openproject_version}}'
+    version: '{% if openproject_branch %}{{openproject_branch}}/{% else %}v{% endif %}{{openproject_version}}'
     force: yes
-    depth: 1
   async: 3600
   poll: 1
   register: cloned_openproject
