Fix some issues with become_user not working
Instead use commands with "su" as a workaround until a better solution
is available.

Problem: cannot use become twice to "drop down" to a different user.

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -9,7 +9,7 @@
   - configuration
 
 - name: set up database
-  shell: 'su - {{openproject_user}} -c "cd ~/openproject && bundle exec rake db:create:all"'
+  shell: 'su - {{openproject_user}} -c "cd ~/openproject && env RAILS_ENV="production" ./bin/rake db:create"'
   args:
     chdir: '{{openproject_path}}/openproject'
   # FIXME: from ansible v2.0.0 we can maybe use the bundler module
@@ -19,7 +19,7 @@
   changed_when: '"already exists" not in rake_db_create_all.stderr'
 
 - name: generate secret token
-  shell: 'su - {{openproject_user}} -c "cd ~/openproject && bundle exec rake generate_secret_token"'
+  shell: 'su - {{openproject_user}} -c "cd ~/openproject && env RAILS_ENV="production" ./bin/rake generate_secret_token"'
   args:
     chdir: '{{openproject_path}}/openproject'
     creates: '{{openproject_path}}/openproject/config/secret_token.yml'
@@ -28,7 +28,7 @@
   become_user: '{{openproject_user}}'
 
 - name: migrate database
-  shell: 'su - {{openproject_user}} -c "cd ~/openproject && bundle exec rake db:migrate"'
+  shell: 'su - {{openproject_user}} -c "cd ~/openproject && env RAILS_ENV="production" ./bin/rake db:migrate"'
   args:
     chdir: '{{openproject_path}}/openproject'
   environment:
@@ -40,7 +40,7 @@
   changed_when: generate_migration.stdout != ""
 
 - name: seed database
-  shell: 'su - {{openproject_user}} -c "cd ~/openproject && bundle exec rake db:seed"'
+  shell: 'su - {{openproject_user}} -c "cd ~/openproject && env RAILS_ENV="production" LOCALE="{{openproject_locale}}" ./bin/rake db:seed"'
   args:
     chdir: '{{openproject_path}}/openproject'
   environment:
@@ -53,7 +53,7 @@
   changed_when: '"Skipping" not in seed_database.stdout'
 
 - name: precompile assets
-  shell: 'su - {{openproject_user}} -c "cd ~/openproject && bundle exec rake assets:precompile"'
+  shell: 'su - {{openproject_user}} -c "cd ~/openproject && env RAILS_ENV="production" ./bin/rake assets:precompile"'
   args:
     chdir: '{{openproject_path}}/openproject'
   environment:
