--- a/tasks/unicorn.yml
+++ b/tasks/unicorn.yml
@@ -1,13 +1,13 @@
 ---
 
-- name: install openproject
+- name: install openproject unit file
   template:
     src: openproject.service.jinja2
     dest: /etc/systemd/system/openproject.service
   notify:
   - reload systemd unit files
 
-- name: enable openproject
+- name: enable openproject unit
   service:
     name: openproject
     enabled: yes
